test/typechecker.d/invalid/fns1.souc.bad
n = 5

f(x: Integer): Integer = fndo
	if True
		return 'c'
